fixed extra spacing in code

--- a/themes/yoga_outreach/style.css
+++ b/themes/yoga_outreach/style.css
@@ -1100,12 +1100,17 @@ footer {
   font-family: Raleway;
   font-weight: 300; }
 
+.page-template-contact-us #site-navigation .menu-main-menu-container a {
+  color: #4a4a4a; }
+
+.page-template-contact-us #main {
+  padding-top: 200px; }
+
 .page-template-contact-us .hero-text {
-  height: 300px;
+  height: 225px;
   width: 100%;
-  padding: 66px 10px 0 10px;
-  color: #fff;
-  background-color: #95AFC9;
+  color: #4a4a4a;
+  background-color: #ebe5d8;
   font-family: Raleway;
   font-weight: 500;
   text-transform: capitalize;
@@ -1116,7 +1121,7 @@ footer {
       flex-direction: column; }
   .page-template-contact-us .hero-text h1 {
     font-size: 1.5rem;
-    margin-bottom: 50px; }
+    margin: 50px; }
   .page-template-contact-us .hero-text .hero-phone {
     font-size: 2rem; }
 
